--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="node_modules/jquery/dist/jquery.min.js "></script>
+    <!-- <script src="node_modules/jquery/dist/jquery.min.js "></script> -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <title>Pagrindinis</title>
     <!-- <link rel="stylesheet" href="dist/vendor.css"> -->
     <link rel="stylesheet" href="dist/main.css">
